[project]
name = "cs511project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coremltools>=8.1",
    "logparser3>=1.0.4",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "psutil>=6.1.0",
    "pyjoules>=0.5.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "torch>=2.5.1",
]
